bootstrap/battery-simulation/components/influxdb/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
      app: influxdb
      app.kubernetes.io/part-of: data-store
    name: influxdb
spec:
    replicas: 1
    selector:
        matchLabels:
            app: influxdb
    serviceName: influxdb
    template:
        metadata:
            labels:
                app: influxdb
        spec:
            serviceAccountName: influxdb
            containers:
              - image: influxdb:2.0.6
                name: influxdb
                securityContext:
                  runAsUser: 0
                ports:
                  - containerPort: 8086
                    name: influxdb
                volumeMounts:
                  - mountPath: /var/lib/influxdb2
                    name: data
    volumeClaimTemplates:
      - metadata:
            name: data
            namespace: influxdb
        spec:
            accessModes:
              - ReadWriteOnce
            resources:
                requests:
                    storage: 1G
