bootstrap/battery-simulation/components/influxdb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: influxdb
spec:
    ports:
      - name: influxdb
        port: 8086
        targetPort: 8086
        nodePort: 30086 
    selector:
        app: influxdb
    type: NodePort
