bootstrap/battery-simulation/components/influxdb/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: influxdb
spec:
  path: /
  to:
    kind: Service
    name: influxdb
    weight: 100
  port:
    targetPort: influxdb
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
